--- a/charts/ms-apps/v2.0.5.12/templates/components/elasticsearch.yaml
+++ b/charts/ms-apps/v2.0.5.12/templates/components/elasticsearch.yaml
@@ -90,6 +90,9 @@ spec:
         - mountPath: /tmp
           name: data
           subPath: tmp
+        - mountPath: /var/tmp
+          name: data
+          subPath: var_tmp
         securityContext:
           readOnlyRootFilesystem: true
         ports:
