--- a/charts/ms-apps/v2.0.5.12/templates/components/activemq.yaml
+++ b/charts/ms-apps/v2.0.5.12/templates/components/activemq.yaml
@@ -91,6 +91,9 @@ spec:
         - mountPath: /tmp
           name: data
           subPath: tmp
+        - mountPath: /var/tmp
+          name: data
+          subPath: var_tmp
         securityContext:
           readOnlyRootFilesystem: true
       imagePullSecrets:
