--- a/charts/ms-apps/v2.1/templates/components/datarouter.yaml
+++ b/charts/ms-apps/v2.1/templates/components/datarouter.yaml
@@ -28,51 +28,15 @@ spec:
       - name: datarouter
         image: {{required "Data Router Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.DATAROUTER }}
         imagePullPolicy: IfNotPresent
-        args:
-        - java
-        - -Xms128m
-        {{- if (eq "Small" .Values.resourceUnit.size) }}
-        - -Xmx{{.Values.resourceUnit.small.memory.max.DATAROUTER }}m
-        {{- else if (eq "Medium" .Values.resourceUnit.size) }}
-        - -Xmx{{.Values.resourceUnit.medium.memory.max.DATAROUTER }}m
-        {{- else if (eq "Large" .Values.resourceUnit.size) }}
-        - -Xmx{{.Values.resourceUnit.large.memory.max.DATAROUTER }}m
-        {{- else if (eq "Xlarge" .Values.resourceUnit.size) }}
-        - -Xmx{{.Values.resourceUnit.xlarge.memory.max.DATAROUTER }}m
-        {{- end }}
-        - -DSYSTEMi_HOME=/metricstream/SYSTEMi
-        - -DJAVA_HOME=/opt/java/bin/
-        - -jar
-        - /metricstream/SYSTEMi/datarouter/data-router.jar
+        {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
         resources:
           limits:
-            {{- if (eq "Small" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.small.memory.max.DATAROUTER }}Mi
-            cpu: {{ .Values.resourceUnit.small.cpu.max.DATAROUTER }}m
-            {{- else if (eq "Medium" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.medium.memory.max.DATAROUTER }}Mi
-            cpu: {{ .Values.resourceUnit.medium.cpu.max.DATAROUTER }}m
-            {{- else if (eq "Large" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.large.memory.max.DATAROUTER }}Mi
-            cpu: {{ .Values.resourceUnit.large.cpu.max.DATAROUTER }}m
-            {{- else if (eq "Xlarge" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.xlarge.memory.max.DATAROUTER }}Mi
-            cpu: {{ .Values.resourceUnit.xlarge.cpu.max.DATAROUTER }}m
-            {{- end }}
+            memory: {{ .memory.max.DATAROUTER }}Mi
+            cpu: {{ .cpu.max.DATAROUTER }}m
           requests:
-            {{- if (eq "Small" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.small.memory.max.DATAROUTER }}Mi
-            cpu: {{ .Values.resourceUnit.small.cpu.max.DATAROUTER }}m
-            {{- else if (eq "Medium" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.medium.memory.max.DATAROUTER }}Mi
-            cpu: {{ .Values.resourceUnit.medium.cpu.max.DATAROUTER }}m
-            {{- else if (eq "Large" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.large.memory.max.DATAROUTER }}Mi
-            cpu: {{ .Values.resourceUnit.large.cpu.max.DATAROUTER }}m
-            {{- else if (eq "Xlarge" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.xlarge.memory.max.DATAROUTER }}Mi
-            cpu: {{ .Values.resourceUnit.xlarge.cpu.max.DATAROUTER }}m
-            {{- end }}
+            memory: {{ .memory.max.DATAROUTER }}Mi
+            cpu: {{ .cpu.max.DATAROUTER }}m
+        {{- end }}
         volumeMounts:
         - mountPath: /metricstream/SYSTEMi/datarouter/datarouter.properties
           name: datarouter
