--- a/charts/ms-apps/v2.1/templates/components/mongo.yaml
+++ b/charts/ms-apps/v2.1/templates/components/mongo.yaml
@@ -41,35 +41,15 @@ spec:
       - name: mongo
         image: {{required "Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.MONGO }}
         imagePullPolicy: IfNotPresent
+        {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
         resources:
           limits:
-            {{- if (eq "Small" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.small.memory.max.MONGO }}Mi
-            cpu: {{ .Values.resourceUnit.small.cpu.max.MONGO }}m
-            {{- else if (eq "Medium" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.medium.memory.max.MONGO }}Mi
-            cpu: {{ .Values.resourceUnit.medium.cpu.max.MONGO }}m
-            {{- else if (eq "Large" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.large.memory.max.MONGO }}Mi
-            cpu: {{ .Values.resourceUnit.large.cpu.max.MONGO }}m
-            {{- else if (eq "Xlarge" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.xlarge.memory.max.MONGO }}Mi
-            cpu: {{ .Values.resourceUnit.xlarge.cpu.max.MONGO }}m
-            {{- end }}
+            memory: {{ .memory.max.MONGO }}Mi
+            cpu: {{ .cpu.max.MONGO }}m
           requests:
-            {{- if (eq "Small" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.small.memory.max.MONGO }}Mi
-            cpu: {{ .Values.resourceUnit.small.cpu.max.MONGO }}m
-            {{- else if (eq "Medium" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.medium.memory.max.MONGO }}Mi
-            cpu: {{ .Values.resourceUnit.medium.cpu.max.MONGO }}m
-            {{- else if (eq "Large" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.large.memory.max.MONGO }}Mi
-            cpu: {{ .Values.resourceUnit.large.cpu.max.MONGO }}m
-            {{- else if (eq "Xlarge" .Values.resourceUnit.size) }}
-            memory: {{ .Values.resourceUnit.xlarge.memory.max.MONGO }}Mi
-            cpu: {{ .Values.resourceUnit.xlarge.cpu.max.MONGO }}m
-            {{- end }}
+            memory: {{ .memory.max.MONGO }}Mi
+            cpu: {{ .cpu.max.MONGO }}m
+        {{- end }}
         volumeMounts:
         - mountPath: /data/db
           name: data
