--- a/charts/ms-apps/v2.1/templates/configmap/resource-config.yaml
+++ b/charts/ms-apps/v2.1/templates/configmap/resource-config.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     addonmanager.kubernetes.io/mode: Reconcile
 data:
-  ACTIVEMQ_MAX_MEM: {{ pluck .Values.resourceUnit.size .Values.resourceUnit | .memory.max.ACTIVEMQ | quote }}
-  DATAROUTER_JAVA_XMX: {{ pluck .Values.resourceUnit.size .Values.resourceUnit | .memory.max.DATAROUTER | quote }}
-  ELASTICSEARCH_JAVA_XMX: {{ pluck .Values.resourceUnit.size .Values.resourceUnit | .memory.max.ELASTICSEARCH | quote }}
-  ORACLE_MAX_MEM: {{ pluck .Values.resourceUnit.size .Values.resourceUnit | .memory.max.ORACLE | quote }}
+  ACTIVEMQ_MAX_MEM: {{ with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }} {{ .memory.max.ACTIVEMQ | quote }} {{ end }}
+  DATAROUTER_JAVA_XMX: {{ with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }} {{ .memory.max.DATAROUTER | quote }} {{ end }}
+  ELASTICSEARCH_JAVA_XMX: {{ with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }} {{ .memory.max.ELASTICSEARCH | quote }} {{ end }}
+  ORACLE_MAX_MEM: {{ with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }} {{ .memory.max.ORACLE | quote }} {{ end }}
