--- a/charts/ms-apps/v2.1/templates/storage/tomcat-pvc.yaml
+++ b/charts/ms-apps/v2.1/templates/storage/tomcat-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: tomcat
+  name: tomcat-pvc
   annotations:
     volume.beta.kubernetes.io/storage-class: ms-storage-class
 spec:
