--- a/charts/ms-apps/v2.1/templates/components/datarouter.yaml
+++ b/charts/ms-apps/v2.1/templates/components/datarouter.yaml
@@ -27,6 +27,12 @@ spec:
       containers:
       - name: datarouter
         image: {{required "Data Router Image Info is mandatory! Read the Project Documentation to understand what and where to configure." .Values.image.DATAROUTER }}
+        env:
+        - name: DATAROUTER_JAVA_XMX
+          valueFrom:
+            configMapKeyRef:
+              name: resource-config
+              key: DATAROUTER_JAVA_XMX
         imagePullPolicy: Always
         {{- with ( pluck .Values.resourceUnit.size .Values.resourceUnit | first ) }}
         resources:
