--- a/charts/ms-apps/v1.0.0/templates/components/tomcat-libreoffice.yaml
+++ b/charts/ms-apps/v1.0.0/templates/components/tomcat-libreoffice.yaml
@@ -67,44 +67,13 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: TOMCAT_JAVA_XMX
+          valueFrom:
+            configMapKeyRef:
+              name: resource-config
+              key: TOMCAT_JAVA_XMX
         - name: CLASSPATH
           value: "/tomcat/bin/bootstrap.jar:/tomcat/bin/tomcat-juli.jar:/tomcat/extralib/*"
-        args:
-        - java
-        - -server
-        - -Xms1024m
-        {{- if (eq "Small" .Values.resourceUnit.size) }}
-        - -Xmx{{.Values.resourceUnit.small.memory.max.TOMCAT}}m
-        {{- else if (eq "Medium" .Values.resourceUnit.size)}}
-        - -Xmx{{.Values.resourceUnit.medium.memory.max.TOMCAT}}m
-        {{- else if (eq "Large" .Values.resourceUnit.size) }}
-        - -Xmx{{.Values.resourceUnit.large.memory.max.TOMCAT}}m
-        {{- else if (eq "Xlarge" .Values.resourceUnit.size) }}
-        - -Xmx{{.Values.resourceUnit.xlarge.memory.max.TOMCAT}}m
-        {{- end }}
-        - -Dcatalina.home=/tomcat
-        - -Dcatalina.base=/tomcat
-        - -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager
-        - -Djava.util.logging.config.file=/tomcat/conf/logging.properties
-        - -Djava.protocol.handler.pkgs=org.apache.catalina.webresources
-        - -Djava.io.tmpdir=/tmp
-        - -Djava.awt.headless=true
-        - -Dlogback.configurationFile=/opt/MetricStream/SYSTEMi/Systemi/Config/logback.xml
-        - -Djava.awt.fonts=/opt/java/jre/lib/fonts
-        - -Djava.security.policy=/opt/MetricStream/SYSTEMi/Systemi/Config/ecp-app.policy
-        - -Djava.library.path=/opt/MetricStream/SYSTEMi/Systemi/webapp/WEB-INF/lib
-        - -DMETRICSTREAM.CONFIG=/opt/MetricStream/SYSTEMi/Systemi/Config/config.client.xml
-        - -DMETRICSTREAM.HOME=/opt/MetricStream/SYSTEMi/Systemi
-        - -DMETRICSTREAM.PROPERTY.NODE_ID=1
-        - -Duser.country=US
-        - -Duser.language=en
-        - -Dcom.sun.management.jmxremote
-        - -Dcom.sun.management.jmxremote.authenticate=false
-        - -Dcom.sun.management.jmxremote.ssl=false
-        - -Dcom.sun.management.jmxremote.port=8888
-        - -Dfile.encoding=UTF-8
-        - org.apache.catalina.startup.Bootstrap
-        - start
         ports:
         - name: tomcat
           containerPort: 8080
