--- a/charts/ms-apps/v1.0.0/templates/network-policy/datarouter.yaml
+++ b/charts/ms-apps/v1.0.0/templates/network-policy/datarouter.yaml
@@ -25,6 +25,9 @@ spec:
     - namespaceSelector:
         matchLabels:
           name: kube-system
+      podSelector:
+        matchLabels:
+          k8s-app: kube-dns
     ports:
     - protocol: UDP
       port: 53
