--- a/charts/ms-apps/v1.0.0/templates/components/tomcat-libreoffice.yaml
+++ b/charts/ms-apps/v1.0.0/templates/components/tomcat-libreoffice.yaml
@@ -94,6 +94,9 @@ spec:
           name: data
         - mountPath: /opt/MetricStream/SYSTEMi/Systemi/keys
           name: keys
+        - mountPath: /data/metricstream
+          name: data
+          subPath: ms_data
         - mountPath: /tomcat/conf
           name: data
           subPath: conf
